plugins {
    id 'application'
    id 'java-library'
    id 'java'
    id 'eclipse'
    id 'idea'
    id 'io.spring.dependency-management' version '1.1.4'
    id 'org.springframework.boot' version '3.2.3'
    id 'org.liquibase.gradle' version '2.2.0'
//    id 'org.graalvm.buildtools.native' version '0.10.1'
}

repositories {
    mavenCentral()
    maven { url 'https://repo.gradle.org/gradle/libs-releases' }
    maven { url 'https://repo.spring.io/release' }
}

group = 'app'
version = '1.0-SNAPSHOT'

sourceCompatibility = 21

allprojects {
    test {
        useJUnitPlatform()
    }
}

subprojects {
    if (it.name != 'main') {
        bootJar {
            enabled = false
        }

        jar {
            enabled = true
        }
    }
}
